# pxart

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  buildfile  index.html  manifest  packages.manifest  repositories.manifest  sitemap.xml
.circleci/: config.yml
.github/workflows/: ci.yml
about/license/: index.html
advanced/benchmarks/: index.html
advanced/statistical_performance/: index.html
advanced/unit_tests/: index.html
api/overview/: index.html
basics/examples/: index.html
basics/quickstart/: index.html
basics/setup_alternative/: index.html
basics/setup_build2/: index.html
basics/setup_cmake/: index.html
bench/: CMakeLists.txt  gen.cpp  generate.cpp  generate_cache.cpp  mcp.cpp  monte_carlo_pi.cpp  msws_bitstream.cpp  msws_simd256_bitstream.cpp  msws_simd256_testu01.cpp  msws_testu01.cpp  mt19937_bitstream.cpp  mt19937_simd256_bitstream.cpp  std_mt19937.cpp  test.bench.cpp  xrsr128p_bitstream.cpp  xrsr128p_simd256_bitstream.cpp  xrsr128p_simd256_testu01.cpp  xrsr128p_testu01.cpp
benchmarks/: CMakeLists.txt  buildfile  manifest
benchmarks/basic/: CMakeLists.txt  buildfile  generate_cache.cpp  monte_carlo_pi.cpp
benchmarks/monte_carlo_pi/: buildfile  main.cpp
benchmarks/performance/: main.cpp
benchmarks/statistical_performance/: CMakeLists.txt  bitstream.ipp  buildfile  msws_bitstream.cpp  msws_simd128_bitstream.cpp  msws_simd256_bitstream.cpp  msws_simd256_testu01.cpp  mt19937_bitstream.cpp  mt19937_simd128_bitstream.cpp  mt19937_simd256_bitstream.cpp  mt19937_simd256_testu01.cpp  mt19937_testu01.cpp  testu01.ipp  xrsr128p_bitstream.cpp  xrsr128p_simd128_bitstream.cpp  xrsr128p_simd256_bitstream.cpp  xrsr128p_simd256_testu01.cpp
benchmarks/uniform_generation/: main.cpp
cmake/: .gitignore  DefaultBuildType.cmake  FindCelero.cmake  FindTestU01.cmake  Uninstall.cmake  Uninstall.cmake.in
development/setup/: index.html
development/status/: index.html
docs/: .gitignore
examples/: .gitignore  CMakeLists.txt  buildfile  makefile  monte_carlo_pi.cpp  monte_carlo_pi_data_in.txt  monte_carlo_pi_data_out.txt  monte_carlo_pi_plot.gp  monte_carlo_pi_plot_2.txt  monte_carlo_pi_plot_error.gp
javascripts/: config.js
librng/: .gitignore  CMakeLists.txt  middle_square_weyl_engine.hpp  sample_analyzer.hpp  uniform_real_distribution.test.cpp
librng/test/: CMakeLists.txt  sample_analyzer.hpp
pxart/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  bit_reversal.test.cpp  buildfile  float32x8.hpp  linear_congruential_generator.hpp  manifest  meta.hpp  middle_square_engine.hpp  middle_square_weyl_engine.hpp  mt19937.hpp  mt19937.test.cpp  mt19937_simd128.hpp  mt19937_simd256.hpp  pxart.hpp  rdrand_engine.hpp  uniform.hpp  uniform.test.cpp  uniform_int_distribution.hpp  uniform_real_distribution.hpp  uniform_real_distribution.test.cpp  utility.hpp  xoroshiro128plus.hpp  xoroshiro128plus.test.cpp  xoroshiro128plus_simd256.hpp
pxart/distribution/: bernoulli.hpp  binomial.hpp  cauchy.hpp  disk.hpp  exponential.hpp  logistic.hpp  normal.hpp  poisson.hpp  uniform.hpp
pxart/gallery/: monte_carlo_pi.hpp
pxart/generator/: minstd_rand.hpp  msws.hpp  mt19937.hpp
pxart/math/: cos.hpp
pxart/monte_carlo/: pi.hpp
pxart/pxart/: algorithm.hpp  buildfile  lcg.hpp  msws.hpp  mt19937.hpp  pcg32.hpp  pxart.hpp  seed_seq.hpp  uniform.hpp  version.hpp.in  xoroshiro128plus.hpp
pxart/pxart/gallery/: monte_carlo_pi.hpp
pxart/pxart/simd128/: msws.hpp  mt19937.hpp  uniform.hpp  xoroshiro128plus.hpp
pxart/pxart/simd256/: msws.hpp  mt19937.hpp  seed_seq.hpp  uniform.hpp  xoroshiro128plus.hpp
pxart/pxart/utilities/: bit_reversal.hpp
pxart/pxart/utility/: bool1x256.hpp  float32x8.hpp  int32x8.hpp  is_valid.hpp  pun_cast.hpp  simd_type.hpp  uint32x8.hpp  uint64x4.hpp
pxart/simd128/: CMakeLists.txt  msws.hpp  msws.test.cpp  mt19937.hpp  mt19937.test.cpp  uniform.hpp  uniform.test.cpp  xoroshiro128plus.hpp  xoroshiro128plus.test.cpp
pxart/simd256/: msws.hpp  msws.test.cpp  mt19937.hpp  mt19937.test.cpp  simd_vector.hpp  simd_vector.test.cpp  uniform.hpp  uniform.test.cpp  utilities.hpp  xoroshiro128plus.hpp  xoroshiro128plus.test.cpp
pxart/test/: analyzer.hpp  histogram.hpp  monty_hall_dilemma.hpp
pxart/utilities/: CMakeLists.txt  bit_reversal.test.cpp  is_valid.test.cpp
pxrun/: CMakeLists.txt  main.cpp  manifest  matrix.cpp  matrix.hpp  testu01.cpp  testu01.hpp
pxrun/pxrun/: CMakeLists.txt  buildfile  main.cpp  matrix.cpp  testu01.cpp  testu01.hpp  testu01_utils.cpp  testu01_utils.hpp
rng/: .gitignore  CMakeLists.txt  middle_square.cpp  middle_square_engine.hpp  middle_square_weyl.cpp  middle_square_weyl_engine.hpp  msws_simd128.test.cpp  msws_simd256.test.cpp  mt19937.test.cpp  mt19937_simd128.test.cpp  mt19937_simd256.hpp  mt19937_simd256.test.cpp  mws.cpp  random_device_info.cpp  rdrand.cpp  rout.cpp  simd_test.cpp  std_mt19937.cpp  std_random_device.cpp  uniform_double.test.cpp  uniform_float.test.cpp  uniform_float_simd256.test.cpp  uniform_int.test.cpp  uniform_real_distribution.hpp  uniform_real_distribution.test.cpp  xoroshiro128plus.cpp  xoroshiro128plus_simd256.hpp  xs128p_simd256.test.cpp
rng/test/: CMakeLists.txt  analyzer.hpp  histogram.hpp  monty_hall_dilemma.hpp  sample_analyzer.hpp
search/: search_index.json
submit/: 0ab02eae0085a05f  438b63c2fe628e2b  aa5a7279241c7a95  efc1bba7904e9709
tests/: CMakeLists.txt  buildfile  float32x8.cpp  main.cpp  manifest  minstd_rand.cpp  mt19937.cpp  testu01_cpp_std_mt19937.cpp  testu01_helper.hpp  testu01_middle_square_weyl.cpp  testu01_utils.cpp  testu01_utils.hpp
tests/basics/: CMakeLists.txt  bit_reversal.cpp  bool1x256.cpp  buildfile  driver.cpp  float32x8.cpp  is_valid.cpp  lcg.cpp  msws.cpp  mt19937.cpp  uint32x8.cpp  uniform.cpp  xoroshiro128plus.cpp
tests/basics/simd128/: msws.cpp  mt19937.cpp  uniform.cpp  xoroshiro128plus.cpp
tests/basics/simd256/: msws.cpp  mt19937.cpp  uniform.cpp  xoroshiro128plus.cpp
tests/io/pcg32/scalar/: buildfile  main.cpp  output.txt
testu01_utils/: CMakeLists.txt  main.cpp  testu01_utils.cpp  testu01_utils.hpp
(+309 files in other folders)
